infra/k8s/property-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: property-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property
  template:
    metadata:
      labels:
        app: property
    spec:
      containers:
        - name: property
          image: 145374100989.dkr.ecr.us-east-1.amazonaws.com/property-portal/property:latest
---
apiVersion: v1
kind: Service
metadata:
  name: property-srv
spec:
  selector:
    app: property
  ports:
    - name: property
      protocol: TCP
      port: 5000
      targetPort: 5000
